--- a/reservation/templates/reservation/base.html
+++ b/reservation/templates/reservation/base.html
@@ -224,6 +224,11 @@
     .custom-accordion .accordion-body {
         color: white; /* Цвет текста в теле аккордеона */
     }
+
+    .container {
+        margin-bottom: 50px; /* Отступ снизу */
+    }
+
     </style>
     <!-- Custom styles for this template -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet"></head>
