--- a/reservation/templates/reservation/includes/inc_menu.html
+++ b/reservation/templates/reservation/includes/inc_menu.html
@@ -1,22 +1,20 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <div class="container-fluid">
+  <div class="container-fluid ">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <div class="collapse navbar-collapse " id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto mb-2 mb-md-0">
         <li class="nav-item active">
           <a class="nav-link" aria-current="page" href="{% url 'reservation:home' %}">Главная</a>
         </li>
         <li class="nav-item dropdown">
 
-          <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-expanded="false">Вкусные Моменты</a>
+          <a class="nav-link dropdown-toggle " href="#" id="dropdown01" data-toggle="dropdown" aria-expanded="false">Вкусные Моменты</a>
           <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdown01">
             <li><a class="dropdown-item" href="{% url 'reservation:info' %}">О ресторане</a></li>
-            {% if user.is_authenticated and user.is_blocked == False %}
             <li><a class="dropdown-item" href="{% url 'reservation:reservation_table' %}">Забронировать столик</a></li>
-            {% endif %}
             {% if user.is_authenticated and user.is_staff or perms.user.can_manage_user and user.is_blocked == False %}
               <li><a class="dropdown-item" href="{% url 'reservation:reservation_list' %}">Управление бронированием</a></li>
             <li><a class="dropdown-item" href="{% url 'user:user_list' %}">Пользователи</a></li>
@@ -50,3 +48,6 @@
     </div>
   </div>
 </nav>
+<div class="container">
+  <!-- Остальной контент страницы -->
+</div>
